// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esm-story-doc no-title.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-07-17T14:45:46.149Z,
    "dateModified": 2020-07-17T14:45:46.149Z,
    "package": "a03a6b619ce62e5e6f82a4a5388ace7c",
    "test": 1,
    "title": "Story",
  },
  "packages": Object {
    "a03a6b619ce62e5e6f82a4a5388ace7c": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.21.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "a03a6b619ce62e5e6f82a4a5388ace7c",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/doc/no-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.21.0",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Story',
  test: 1,
};
",
}
`;

exports[`esm-story-doc title-and-parameters.js 1`] = `
Object {
  "components": Object {
    "73cac298d983c71aec166657453a64fe": Object {
      "name": "ControlsTable",
      "package": "8081f639b288cdd9ab2efc243ebbaa32",
    },
  },
  "doc": Object {
    "component": "ControlsTable",
    "components": Object {},
    "componentsLookup": Object {
      "ControlsTable": "73cac298d983c71aec166657453a64fe",
    },
    "date": 2020-07-17T14:45:45.642Z,
    "dateModified": 2020-07-17T14:45:45.642Z,
    "package": "8081f639b288cdd9ab2efc243ebbaa32",
    "smartControls": Object {
      "smart": false,
    },
    "title": "Storybook/Blocks/ControlsTable",
  },
  "packages": Object {
    "8081f639b288cdd9ab2efc243ebbaa32": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.21.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "8081f639b288cdd9ab2efc243ebbaa32",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/doc/title-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.21.0",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
  component: ControlsTable,
  smartControls: {
    smart: false,
  },
};
",
}
`;

exports[`esm-story-doc title-controls-and-parameters.js 1`] = `
Object {
  "components": Object {
    "eef0b4fe04a3c49402964c3c8dbe5bc8": Object {
      "name": "ControlsTable",
      "package": "6db9fafb88b9be0bff2ddaea194f3c5b",
    },
  },
  "doc": Object {
    "component": "ControlsTable",
    "components": Object {},
    "componentsLookup": Object {
      "ControlsTable": "eef0b4fe04a3c49402964c3c8dbe5bc8",
    },
    "controls": Object {
      "name": Object {
        "label": "Name",
        "order": 9999,
        "type": "ControlTypes.TEXT",
        "value": "Mark",
      },
    },
    "date": 2020-07-17T14:45:45.642Z,
    "dateModified": 2020-07-17T14:45:45.643Z,
    "package": "6db9fafb88b9be0bff2ddaea194f3c5b",
    "title": "Storybook/Kind",
  },
  "packages": Object {
    "6db9fafb88b9be0bff2ddaea194f3c5b": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.21.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "6db9fafb88b9be0bff2ddaea194f3c5b",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/doc/title-controls-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.21.0",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Kind',
  component: ControlsTable,
  controls: {
    name: {
      type: ControlTypes.TEXT,
      label: 'Name',
      value: 'Mark',
      order: 9999,
    },
  },
};
",
}
`;

exports[`esm-story-doc with-title.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-07-17T14:45:46.149Z,
    "dateModified": 2020-07-17T14:45:46.149Z,
    "package": "39a28a959d9e8a3456b1df4b10db9ffc",
    "title": "Storybook/Blocks/ControlsTable",
  },
  "packages": Object {
    "39a28a959d9e8a3456b1df4b10db9ffc": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.21.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "39a28a959d9e8a3456b1df4b10db9ffc",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/esm/doc/with-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.21.0",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
};
",
}
`;
